--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-dev": "webpack --config webpack.dev.config.js --progress --color",
     "build-pro": "webpack --config webpack.pro.config.js --progress --color",
     "deploy": "gh-pages -d example/dist",
-    "publish-demo": "npm run build && npm run deploy"
+    "publish-demo": "npm run build-dev && npm run deploy"
   },
   "keywords": [
     "react",
